# sint-protocol

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  ANNOUNCEMENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_MERGE_PROMPT.md  CLAUDE_CODE_MISSION.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY-TARGETS.md  COMPLETE_ROADMAP_IMPLEMENTATION_SPECS.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  EXECUTION_SUMMARY.md  IMPLEMENTATION_FINAL.md  INDEX.md  MODULES.md  NEXT_PRIORITIES.md  ONE-PAGER.md  PROTOCOL.md  README.md  REBASE_STRATEGY.md  ROADMAP.md  SECURITY.md  SESSION_FINAL_STATUS.md  WHITEPAPER.md  competitive-analysis.md  docker-compose.yml  glama.json  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  sint-mcp.config.example.json  turbo.json
.github/: pull_request_template.md
.mcp/: server.json
docs/: COMPETITIVE-LANDSCAPE.md  CONFORMANCE_CERTIFICATION_MATRIX_v0.2.md  DOMAIN_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PITCH.md  PROTOCOL_COMMONS_SPEC.md  RELEASE_NOTES_v0.2.md  RESEARCH_AGENDA_2026-2031.md  ROADMAP.md  ROBOTIC_USE_CASES.md  SINT_v0.2_SPEC.md  SIPS.md  SPAI_2026_ABSTRACT.md  SPAI_2026_SUBMISSION.tex  TOKENOMICS.md  WHITEPAPER.md  getting-started.md  index.md  marketing-message-map.md  rfc-001-policy-bundle.md  roadmap-phases-legacy.md  roadmap.md  tokenomics-legacy.md  whitepaper-outline.md  whitepaper-v2.md  whitepaper.md
examples/: sint-pdp-interceptor-quickstart.mjs
scripts/: generate-certification-bundle.mjs  generate-community-starter-board.mjs  generate-industrial-benchmark-report.mjs  generate-nist-submission-bundle.mjs  publish.sh  (+3 more)
sdks/python/: README.md  pyproject.toml  sint_client.py
sdks/python/examples/: crewai_guardrail_flow.py  openai_agents_governance_flow.py  warehouse_amr_flow.py
sdks/python/sint/: __init__.py  client.py  crewai.py  openai_agents.py  scanner.py  tokens.py  types.py
sdks/python/tests/: test_crewai_adapter.py  test_openai_agents_adapter.py  test_scanner.py  test_types.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/sint-client/: Cargo.toml
sdks/rust/sint-client/examples/: hello_world.rs
sdks/rust/sint-client/src/: builder.rs  client.rs  error.rs  lib.rs  retry.rs  types.rs
sdks/rust/sint-client/tests/: integration_test.rs
(+297 files in other folders)
