[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sint-sdk"
version = "0.2.0"
description = "Python SDK for SINT Gateway"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SINT Maintainers" }]
license = { text = "MIT" }

[tool.setuptools]
py-modules = ["sint_client"]

