[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sint-protocol"
version = "0.1.0"
description = "Python SDK for SINT Protocol — security layer for physical AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SINT Maintainers" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
sint-scan = "sint.scanner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sint*"]
