[workspace]
members = ["sint-client"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v7"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
thiserror = "1"
