[package]
name = "sint-client"
version = "0.1.0"
edition = "2021"
description = "SINT Protocol — Rust client library for PolicyGateway integration"
license = "MIT"
repository = "https://github.com/sint-ai/sint-protocol"
keywords = ["ai-safety", "agents", "authorization", "mcp", "robotics"]
categories = ["authentication", "network-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1"

[[example]]
name = "hello_world"
